Fix overflowing tile titles; fix #54

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -39,18 +39,37 @@ DOCX custom styles are annotated into data-custom-style.
     .image-container { height: 250px !important; }
     .methods_hub_nav_teaser { margin-bottom: 15px; }
     .quarto-listing-gallery .listing-item { margin-bottom: 10px; }
-    .g-col-4 { 
-        width: 100% !important; 
+    .g-col-4 {
+        width: 100% !important;
         flex: 0 0 100% !important;
         max-width: 100% !important;
     }
-    .grid { 
+    .grid {
         display: flex !important;
         flex-direction: column !important;
     }
     .tile {
         margin-bottom: 20px !important;
     }
+}
+
+/* Truncate tile titles */
+h2.tile_title_gallery {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+/* Show full text on hover */
+h2.tile_title_gallery:hover::after {
+    content: attr(data-fulltext);
+    position: absolute;
+    background: #fff;
+    border-radius: 4px;
+    left: 0;
+    white-space: normal;
+    z-index: 10;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
 
 /* Truncate method titles in the gallery */
